; ModuleID = '/home/carl/AnghaBench/jq/src/extr_inject_errors.c_fread.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_inject_errors.c_fread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@fail_read = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @fread(i8* %0, i64 %1, i64 %2, i32* %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i64, align 8
  store i8* %0, i8** %6, align 8
  store i64 %1, i64* %7, align 8
  store i64 %2, i64* %8, align 8
  store i32* %3, i32** %9, align 8
  %11 = call i32 @GET_REAL(i64 (i8*, i64, i64, i32*)* @fread)
  %12 = load i8*, i8** %6, align 8
  %13 = load i64, i64* %7, align 8
  %14 = load i64, i64* %8, align 8
  %15 = load i32*, i32** %9, align 8
  %16 = call i64 @real_fread(i8* %12, i64 %13, i64 %14, i32* %15)
  store i64 %16, i64* %10, align 8
  %17 = load i32*, i32** @fail_read, align 8
  %18 = load i32*, i32** %9, align 8
  %19 = icmp eq i32* %17, %18
  br i1 %19, label %20, label %21

20:                                               ; preds = %4
  store i64 0, i64* %5, align 8
  br label %23

21:                                               ; preds = %4
  %22 = load i64, i64* %10, align 8
  store i64 %22, i64* %5, align 8
  br label %23

23:                                               ; preds = %21, %20
  %24 = load i64, i64* %5, align 8
  ret i64 %24
}

declare dso_local i32 @GET_REAL(i64 (i8*, i64, i64, i32*)*) #1

declare dso_local i64 @real_fread(i8*, i64, i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
